[bdist_wheel]
universal = 1

[metadata]
name = vimv
author = Ivan Maeder
author_email = ivan.maeder@gmail.com
url = https://github.com/ivanmaeder/vimv
description = Rename a list of files using a text editor
license = GPLv3
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Operating System :: Microsoft :: Windows
    Operating System :: Unix
    Topic :: Software Development :: Version Control
    Topic :: System :: Archiving
platforms = any
long_description = file: README.md

[options]
zip_safe = 1
python_requires = >=2.7,!=3.0.*,!=3.1.*,!=3.2.*,!=3.3.*,
install_requires =
py_modules = vimv
